# pqlens

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
pqlens/: __init__.py  __main__.py  cli.py  main.py  parquet_viewer.py  parquet_viewer_new.py
pqlens/core/: __init__.py  display.py  interactive.py  reader.py
pqlens/formatters/: __init__.py  formatter.py  simple.py  table.py
pqlens/utils/: __init__.py  errors.py  terminal.py  validation.py
tests/: __init__.py  create_test_data.py  test_cli.py  test_error_handling.py  test_error_scenarios.py  test_integration.py  test_lazy_loading.py  test_memory_monitoring.py  test_package.py  test_parquet_viewer.py
tests/data/: empty.parquet  large.parquet  mixed_types.parquet  simple.parquet  wide.parquet
